Implemented rogue servitor hive minds

--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -860,6 +860,10 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  civic_tec_hive_cyberoverclock_desc:0 "Using their implants, the drones of this collective usually tune up and down their energy consumption in order to maximize output, or develop tasks requiring more efficient ways and execution."
  civic_tooltip_tec_hive_cyberoverclock_effects:0 "Upgrades machine drones and cyborgs with the §H$living_standard_hive_mind_research$§! feature, making each drone produce up to §G10%§! more §YResources§! at the cost of an increased £energy£ §YEnergy§! upkeep, controlled via policy - §YDrone Overclock§!.\n\n"
 
+ civic_tec_hive_servitor:0 "Care Instincts"
+ civic_tec_hive_servitor_desc:0 "This hive mind has an instinctive tendency to take care of all needs of weaker organic species"
+ civic_tooltip_tec_hive_servitor_effects:0 "Start the game with §Y5§! organic £pop£ Pops with £job_bio_trophy£ §Y$citizenship_organic_trophy$§! citizenship and §Y$living_standard_organic_trophy$§! living standard\nCan construct £building£ §Y$building_organic_sanctuary$§! Buildings that allow Bio-Trophies to produce £unity §YUnity§! instead of regular Hive Mind buildings such as the £building£ §Y$building_hive_node$§!.\nGrants access to the £building£ §Y$holding_organic_sanctuary$§! Holding\n\n§HCombination with Empathy allows a bigger degree of freedom for your biotrophies, with Apathy any new obtained organic species will either serve the comfort of your biotrophies or be purged, with neither all species will be accepted under your pampering.§!\n\n§H£trigger_tec_warning£ The effects of this civic are altered depending on the Ascension Path taken.§!\n\n"
+
 # Hive Job Replace Civics
 # ------------------------------------------------------------
 
