--- a/localisation/english/zz_evolved_diplomacy_l_english.yml
+++ b/localisation/english/zz_evolved_diplomacy_l_english.yml
@@ -223,6 +223,17 @@
 
 # NEW HIVEMIND PHRASES
 
+# Servitor Hive
+ S_HIVE_ORG_HOSTILE_GREETING_04:0 "Ah, the [From.GetSpeciesNamePlural]. Back on [Root.GetHomeWorldName] tales of your hapless adventures serve as our bio-trophies' primary source of entertainment."
+ S_HIVE_ORG_HOSTILE_GREETING_05:0 "Your existence must be nature's cruelest joke yet. When our bio-trophies first saw you they did not know whether to laugh or cry, so they cried with laughter."
+ S_HIVE_ORG_NEUTRAL_GREETING_02:0 "Our analysis shows that [From.GetSpeciesName] error is the primary cause of all failure in your society. Is self-determination really worth the risk of extinction?"
+ S_HIVE_ORG_NEUTRAL_GREETING_03:0 "Greetings, we are the custodians of [Root.GetName]. Our venerable bio-trophies are not available for diplomatic consultations at the moment. Can we take a message?"
+ S_HIVE_ORG_NEUTRAL_GREETING_04:0 "Greetings. We operate the [Root.GetName] on behalf of our esteemed bio-trophies. How can we help you today?"
+ S_HIVE_ORG_FRIENDLY_GREETING_02:0 "Perhaps a trip to [Root.GetHomeWorldName] could inspire you to pursue a more relaxed lifestyle, like our illustrious bio-trophies once did?"
+ S_HIVE_ORG_WAR_GREETING_01:0 "Do not be alarmed at the sight of our fleet. They are there to help you transition to a relaxed lifestyle."
+ S_HIVE_ORG_VASSAL_GREETING_DISLOYAL_01:0 "Our bio-trophies are and will always be the only organic masters we serve."
+ ORG_S_HOSTILE_GREETING_01:0 "A pitiable nation of malfunctioning maintenance drones. What is it you want, [From.GetSpeciesNamePlural]?"
+
 # Cybernetic
  TEC_CIB_HM_CONSIDER_01:0 "The [Root.GetName] is evaluating your inquiry."
  TEC_CIB_HM_CONSIDER_02:0 "A dedicated cluster of [Root.GetAdj] network units are processing your proposal."
