--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -611,6 +611,8 @@ personality_hive_kind_desc:0 "Driven by the desire of understanding single-minde
 
  gov_tec_hive_regular_devourer:0 "Devourer Collective"
  gov_tec_hive_regular_devourer_desc:0 "This government operates as a single consciousness, with each single part of it subsumed to an infinite desire of devouring and consuming any other life in the galaxy."
+ gov_hive_servitor:0 "Caretaker Hive"
+ gov_hive_servitor_desc:0 "This Collective Conciousness exists to serve. While the drones have no concept of individual desires, the collective goes out of its way to fulfill any and all needs of other organic species"
 
 # ------------------------------------------------- Biological
  gov_tec_hive_bio:0 "Megaorganism"
