--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -1077,3 +1077,4 @@ edict_immortal_ruler_desc:0 "Invoking this edict will claim our current Ruler as
  planet_districts_farming:0 "Agricultural Districts"
  planet_districts_generator:0 "Generator Districts"
  planet_districts_mining:0 "Mining Districts"
+ no_hive_trophy:0 "We can't pamper hive-minded pops"
