Some new economic categories for livestock jobs, new scripted modifiers for assembly localization in case of assembly disabling, fixed assembly rules and gene modding of cyborg traits on advanced cyborgs (T-0650/T-0651)

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1423,7 +1423,7 @@ job_tec_master_cloner_effect_t3_desc: "\nAfter the upgrade, £job_tec_cloner£ $
  job_tec_master_bioengineer:0 "Master Bioengineer"
  job_tec_master_bioengineer_plural:0 "Master Bioengineers"
  job_tec_master_bioengineer_desc:0 "Only a few can reach the degree of perfection in bioengineering, biological weaving and template adjusts these individuals have achieved, now consecrated to increase the empire population, exponentially."
- job_tec_master_bioengineer_effect_desc:0 "£job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ convert [root.tec_bioengineer_upkeep] into §Y$tec_loc_biological_assembly$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_bioengineer_effect_desc:0 "£job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ convert [root.tec_bioengineer_upkeep] into §YBio-Construct $tec_loc_biological_assembly$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_bioengineer_add:0 "$job_tec_master_bioengineer$ Jobs"
  mod_job_tec_master_bioengineer_per_pop:0 "§G+1§! £mod_job_tec_bioengineer_add£ $job_tec_master_bioengineer$ Job per $VALUE$ Pops"
  mod_job_tec_master_bioengineer_per_pop_short:0 "\n§G+1§! £mod_job_tec_bioengineer_add£ per $VALUE$ £pop£"
@@ -1434,7 +1434,7 @@ job_tec_master_bioengineer_effect_t3_desc: "\nAfter the upgrade, £job_tec_bioen
  job_tec_master_bioengineer_drone:0 "Master Bioengineer Drone"
  job_tec_master_bioengineer_drone_plural:0 "Master Bioengineer Drones"
  job_tec_master_bioengineer_drone_desc:0 "This special kind of drone is able to weave and supervise extremely intrincated bioengineering processes, radically boosting the collective's bioengineered population."
- job_tec_master_bioengineer_drone_effect_desc:0 "£job_tec_bioengineer_drone£ $job_tec_master_bioengineer_drone_plural$ convert [root.tec_bioengineer_upkeep] into §Y$tec_loc_biological_assembly$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_bioengineer_drone_effect_desc:0 "£job_tec_bioengineer_drone£ $job_tec_master_bioengineer_drone_plural$ convert [root.tec_bioengineer_upkeep] into §YBio-Construct $tec_loc_biological_assembly$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_bioengineer_drone_add:0 "$job_tec_master_bioengineer_drone$ Jobs"
  mod_job_tec_master_bioengineer_drone_per_pop:0 "§G+1§! £mod_job_tec_bioengineer_drone_add£ $job_tec_master_bioengineer_drone$ Job per $VALUE$ Pops"
  mod_job_tec_master_bioengineer_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_drone_add£ per $VALUE$ £pop£"
@@ -3666,8 +3666,24 @@ mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
 
  building_tec_tr_devouring_maw:0 "All-Devouring Maw"
  building_tec_tr_devouring_maw_desc:0 "A"
- tec_devouring_maw_building_effect_2:0 "A"
+ building_tec_tr_devouring_maw_building_effect_2:0 "A"
 
+
+job_angler_effect_desc: "$job_aqu_angler_effect_desc$"
+
+building_tec_factory_gestalt: "\n§HThis building will swap half of the £job_foundry£ $job_alloy_drone_plural$/$job_fabricator_plural$ jobs on the Industrial district to £job_artisan£ $job_artisan_drone_plural$ Jobs.§!"
+
+
+# Assembly Localization
+
+mod_tec_assembly_prohibited_no_bioservant: "§RNo $tec_loc_biological_assembly$ provided as assembling species is not a Bio-Construct§!"
+mod_tec_assembly_prohibited_no_bioservant_short: ""
+mod_tec_assembly_prohibited_no_organic: "§RNo $tec_loc_biological_assembly$ provided as assembling species is a Bio-Construct§!"
+mod_tec_assembly_prohibited_no_organic_short: ""
+mod_tec_assembly_prohibited_no_cyborg: "§RNo $tec_loc_biological_assembly$ provided as assembling species is not a Cyborg§!"
+mod_tec_assembly_prohibited_no_cyborg_short: ""
+mod_tec_assembly_prohibited_no_hive: "§RNo $tec_loc_biological_assembly$ provided as assembling species is not Hive Minded§!"
+mod_tec_assembly_prohibited_no_hive_short: ""
 
 ############ removed ############
 
@@ -3682,8 +3698,3 @@ mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
  district_tec_elysium_commercial:0 "Elysian Commercial Arcology"
  district_tec_elysium_commercial_plural:0 "Elysian Commercial Arcologies"
  district_tec_elysium_commercial_desc:0 "Specialized arcologies where you can buy nearly all possible things fabricated in the ring, or enjoy a good meal from products directly harvested on it."
-
-
-job_angler_effect_desc: "$job_aqu_angler_effect_desc$"
-
-building_tec_factory_gestalt: "\n§HThis building will swap half of the £job_foundry£ $job_alloy_drone_plural$/$job_fabricator_plural$ jobs on the Industrial district to £job_artisan£ $job_artisan_drone_plural$ Jobs.§!"
