--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -168,6 +168,9 @@ empire_not_elitist_or_materialist:0 "$TRIGGER_FAIL$Our empire does not embrace e
  mod_planet_jobs_tec_cybernetics_produces_mult:0 "§BCybernetic§! Pop Output"
  mod_planet_jobs_tec_cybernetics_upkeep_mult:0 "§BCybernetic§! Pop Upkeep"
 
+# Organic batteries
+ planet_tec_batteries: "Organic Batteries"
+
  # Trait specific
  planet_jobs_tec_biopsionic_embroided:0 "Embroided Pops"
  mod_planet_jobs_tec_biopsionic_embroided_produces_mult:0 "§YEmbroided§! Pop Output"
