Tweaks and loc changes

--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -145,7 +145,7 @@
 
  # ---- Effects
  ap_engineered_evolution_tooltip:0 "We will prepare the §Y$situation_tec_gene_path_t1$§! situation, which will help us find a way to improve our Biological species."
- ap_engineered_evolution_tooltip_discovered:0 "We will prepare the §Y$situation_tec_gene_path_t1$§ situation, which will improve our organic species with §GGenetic Malleability§!.\n\nThe §GGenetic Malleability§! reduce the costs of §Hbasic traits§! by §Y1§!, up to 1 trait point cost, allowing more diverse Biological Species modifications."´
+ ap_engineered_evolution_tooltip_discovered:0 "We will prepare the §Y$situation_tec_gene_path_t1$§! situation, which will improve our organic species with §GGenetic Malleability§!.\n\nThe §GGenetic Malleability§! reduce the costs of §Hbasic traits§! by §Y1§!, up to 1 trait point cost, allowing more diverse Biological Species modifications."
  ap_engineered_evolution_modifier_desc:1 ""
 
  # ---- Provides
@@ -1564,16 +1564,16 @@ tech_reverse_advanced_dome: " "
  tec_cybernetic_path.10050.name:0 "Artificial Selection"
  tec_cybernetic_path.10050.desc:0 "We have finished the blueprints for the mainframe modules and prepared the initial batch of automatic printers, adapted to a fast deployment.\nThese modules provide a potent economic advantage over non-augmented population, and are amplified by our planetary development.\n\nWe must choose carefully as this is a §RDifficult§! decision to undo."
  tec_cybernetic_path.10050.a:0 "£job£ Versatile Grade: §HOutput§!"
- tec_cybernetic_path.10050.a.tooltip:0 "The Cybernetic trait will gain the following main module:\n$tec_trait_cybernetic_module_versatility$"
+ tec_cybernetic_path.10050.a.tooltip:0 "The Cybernetic trait will gain the following main module:\n$trait_tec_cybernetic_module_versatility$"
  tec_cybernetic_path.10050.b:0 "£job_researcher£ Research Grade: §HInvention§!"
- tec_cybernetic_path.10050.b.tooltip:0 "The Cybernetic trait will gain the following main module:\n$tec_trait_cybernetic_module_research$"
+ tec_cybernetic_path.10050.b.tooltip:0 "The Cybernetic trait will gain the following main module:\n$trait_tec_cybernetic_module_research$"
  tec_cybernetic_path.10050.c:0 "£job_foundry£ Industrial Grade: §HProduction§!"
- tec_cybernetic_path.10050.c.tooltip:0 "The Cybernetic trait will gain the following main module:\n$tec_trait_cybernetic_module_industrial$"
+ tec_cybernetic_path.10050.c.tooltip:0 "The Cybernetic trait will gain the following main module:\n$trait_tec_cybernetic_module_industrial$"
 
  tec_cybernetic_path.10051.name:0 "Artificial Selection"
- tec_cybernetic_path.10050.desc_versatility:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.a$\n$tec_trait_cybernetic_module_versatility$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
- tec_cybernetic_path.10050.desc_research:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.b$\n$tec_trait_cybernetic_module_research$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
- tec_cybernetic_path.10050.desc_industrial:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.c$\n$tec_trait_cybernetic_module_industrial$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
+ tec_cybernetic_path.10050.desc_versatility:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.a$\n$trait_tec_cybernetic_module_versatility$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
+ tec_cybernetic_path.10050.desc_research:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.b$\n$trait_tec_cybernetic_module_research$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
+ tec_cybernetic_path.10050.desc_industrial:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.c$\n$trait_tec_cybernetic_module_industrial$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
  tec_cybernetic_path.10051.a:0 "We should §YReconsider§!"
  tec_cybernetic_path.10051.a.tooltip:0 "We will pick again the Main Cybernetic Module"
  tec_cybernetic_path.10051.b:0 "§YConfirm§! the Main Module"
@@ -1587,17 +1587,17 @@ tech_reverse_advanced_dome: " "
  tec_cybernetic_path.10090.name:0 "Supplementary Modules"
  tec_cybernetic_path.10090.desc:0 "We have done it, we have extended the processing capacity our implants can handle, and as so, we can add a secondary set of modules that can reinforce the functionality of the main ones.\nThe flexible capacity of these new implants allow an easier modification at an empire level, due to fast production, distribution and implementation."
  tec_cybernetic_path.10090.a:0 "£pop£ Life-Line Sub-Module: §HLifespan§!"
- tec_cybernetic_path.10090.a.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$tec_trait_cybernetic_submodule_lifespan$"
+ tec_cybernetic_path.10090.a.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$trait_tec_cybernetic_submodule_lifespan$"
  tec_cybernetic_path.10090.b:0 "£job_soldier£ Mili-Grade Sub-Module: §HArmy Damage§!"
- tec_cybernetic_path.10090.b.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$tec_trait_cybernetic_submodule_warfare$"
+ tec_cybernetic_path.10090.b.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$trait_tec_cybernetic_submodule_warfare$"
  tec_cybernetic_path.10090.c:0 "£job_soldier£ Survival Sub-Module: §HArmy Health§!"
- tec_cybernetic_path.10090.c.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$tec_trait_cybernetic_submodule_survival$"
+ tec_cybernetic_path.10090.c.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$trait_tec_cybernetic_submodule_survival$"
  tec_cybernetic_path.10090.d:0 "£consumer_goods£ Recycling Sub-Module: §HUpkeep§!"
- tec_cybernetic_path.10090.d.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$tec_trait_cybernetic_submodule_recycling$"
+ tec_cybernetic_path.10090.d.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$trait_tec_cybernetic_submodule_recycling$"
  tec_cybernetic_path.10090.e:0 "£building£ Printing Sub-Module: §HConstruction§!"
- tec_cybernetic_path.10090.e.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$tec_trait_cybernetic_submodule_construction$"
+ tec_cybernetic_path.10090.e.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$trait_tec_cybernetic_submodule_construction$"
  tec_cybernetic_path.10090.f:0 "£influence£ Knowledge Sub-Module: §HExperience Gain§!"
- tec_cybernetic_path.10090.f.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$tec_trait_cybernetic_submodule_knowledge$"
+ tec_cybernetic_path.10090.f.tooltip:0 "The Cybernetic trait will gain the following minor module:\n$trait_tec_cybernetic_submodule_knowledge$"
 
 
 # T1 Project finished - 
