--- a/localisation/english/zz_evolved_tech_l_english.yml
+++ b/localisation/english/zz_evolved_tech_l_english.yml
@@ -370,15 +370,13 @@
  TECH_UNLOCK_TEC_STARBASE_ENGINEERING_TITLE:0 "§HUnlocks Starbase Module:§! $sm_tec_starbase_m_engineering$"
  TECH_UNLOCK_TEC_STARBASE_ENGINEERING_DESC:0 "§H$sm_tec_starbase_m_engineering$§!\nStarbase Buildings that produce £engineering£ §YEngineering Research§! at near no cost.\n\nThe starbase building output is increased on systems with Neutron Stars, and benefits from Research Station Bonuses."
 
-
  tech_tec_sb_xxl_cannons:0 "Advanced Station Weaponry"
  tech_tec_sb_xxl_cannons_desc:0 "Advancements in energy management and reactor miniaturization allows mounting higher and more powerful weapons on our Starbases."
  TECH_UNLOCK_TEC_STARBASE_XXL_CANNONS_TITLE:0 "§HUnlocks Starbase Module:§! $sm_tec_starbase_m_xxl_cannons$"
  TECH_UNLOCK_TEC_STARBASE_XXL_CANNONS_DESC:0 "§H$sm_tec_starbase_m_xxl_cannons$§!\n$sm_tec_starbase_m_xxl_cannons_desc$.\n\n§HAny previous equipment on starbases will be automatically UPGRADED and will be no longer available.§!"
 
-
  tech_tec_sb_xxl_hangars:0 "Automated Station Flotilla"
- tech_tec_sb_xxl_hangars_desc:0 "Using the latests military technologies, an array of semi-autonomous strike crafts are able to protect our Starbases from external dangers"
+ tech_tec_sb_xxl_hangars_desc:0 "Using the latest military technologies, an array of semi-autonomous strike crafts are able to protect our Starbases from external dangers"
  TECH_UNLOCK_TEC_STARBASE_XXL_HANGARS_TITLE:0 "§HUnlocks Starbase Module:§! $sm_tec_starbase_m_xxl_hangars$"
  TECH_UNLOCK_TEC_STARBASE_XXL_HANGARS_DESC:0 "§H$sm_tec_starbase_m_xxl_hangars$§!\n$sm_tec_starbase_m_xxl_hangars_desc$.\n\n§HAny previous equipment on starbases will be automatically UPGRADED and will be no longer available.§!"
 
