--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -761,50 +761,91 @@
 
 # --------------- BIOLOGICAL PATH TRAITS ----------------------
 # xenotransplantation
- trait_tec_bio_mutagenic:0 "Integrated Muta-Genus"
- trait_tec_bio_mutagenic_desc:0 "§LTo do§!"
+ trait_tec_biological_mutagenic:0 "Integrated Muta-Genus"
+ trait_tec_biological_mutagenic_desc:0 "§LTo do§!"
 
- mod_trait_tec_biological_mutagenus_tooltip:0 "[tec_trait_cybernetic_module_block_1][tec_trait_cybernetic_module_block_2][tec_trait_cybernetic_submodule_block_1][tec_trait_cybernetic_submodule_block_2][tec_trait_cybernetic_leader_block]"
+ mod_trait_tec_biological_mutagenus_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2][trait_tec_cybernetic_leader_block]"
 
- tec_trait_tec_bio_mutagenic_symbiote:0 "Symbiote:\n"
- tec_trait_tec_bio_mutagenic_mutation:0 "Mutation:\n"
- tec_trait_tec_bio_mutagenic_evolution:0 "Forced Evolution:\n"
+ tec_trait_tec_biological_mutagenic_symbiote:0 "Symbiote:\n"
+ tec_trait_tec_biological_mutagenic_mutation:0 "Mutation:\n"
+ tec_trait_tec_biological_mutagenic_evolution:0 "Forced Evolution:\n"
 
- trait_tec_bio_exoskeleton:0 "Xenoskeleton"
- trait_tec_bio_exoskeleton_desc:0 ""
+ trait_tec_biological_exoskeleton:0 "Xenoskeleton"
+ trait_tec_biological_exoskeleton_desc:0 ""
 
- trait_tec_bio_intellect:0 "Mutative Intellect"
- trait_tec_bio_intellect_desc:0 "§LTo do§!"
+ trait_tec_biological_intellect:0 "Mutative Intellect"
+ trait_tec_biological_intellect_desc:0 "§LTo do§!"
 
- trait_tec_bio_brain:0 "Cortex Germinations"
- trait_tec_bio_brain_desc:0 ""
+ trait_tec_biological_brain:0 "Cortex Germinations"
+ trait_tec_biological_brain_desc:0 ""
 
- trait_tec_bio_symbiotes:0 "Polyorganic Symbiotes"
- trait_tec_bio_symbiotes_desc:0 ""
+ trait_tec_biological_symbiotes:0 "Polyorganic Symbiotes"
+ trait_tec_biological_symbiotes_desc:0 ""
  
- trait_tec_bio_overdrive:0 "Endocrinal Overdrive"
- trait_tec_bio_overdrive_desc:0 ""
+ trait_tec_biological_overdrive:0 "Endocrinal Overdrive"
+ trait_tec_biological_overdrive_desc:0 ""
 
- trait_tec_bio_reproduction:0 "Accelerated Mitosis"
- trait_tec_bio_reproduction_desc:0 ""
+ trait_tec_biological_reproduction:0 "Accelerated Mitosis"
+ trait_tec_biological_reproduction_desc:0 ""
 
- trait_tec_bio_appendages:0 "Bio-Appendages"
- trait_tec_bio_appendages_desc:0 ""
+ trait_tec_biological_appendages:0 "Bio-Appendages"
+ trait_tec_biological_appendages_desc:0 ""
 
- trait_tec_bio_unity:0 "Cellular Memory"
- trait_tec_bio_unity_desc:0 ""
+ trait_tec_biological_unity:0 "Cellular Memory"
+ trait_tec_biological_unity_desc:0 ""
 
- trait_tec_bio_unimind:0 "Geno-Unimind"
- trait_tec_bio_unimind_desc:0 ""
+ trait_tec_biological_unimind:0 "Geno-Unimind"
+ trait_tec_biological_unimind_desc:0 ""
 
- trait_tec_bio_energy:0 "Bioelectric Synchrony"
- trait_tec_bio_energy_desc:0 ""
+ trait_tec_biological_energy:0 "Bioelectric Synchrony"
+ trait_tec_biological_energy_desc:0 ""
 
- trait_tec_bio_mining:0 "Litochemical Biology"
- trait_tec_bio_mining_desc:0 ""
+ trait_tec_biological_mining:0 "Litochemical Biology"
+ trait_tec_biological_mining_desc:0 ""
 
- trait_tec_bio_farming:0 "Biomatter Affinity"
- trait_tec_bio_farming_desc:0 ""
+ trait_tec_biological_farming:0 "Biomatter Affinity"
+ trait_tec_biological_farming_desc:0 ""
+
+ # Building
+ building_tec_biological_extractor:0 "Xenocyte Extractor"
+ building_tec_biological_extractor_plural:0 "Xenocyte Extractors"
+ building_tec_biological_extractor_desc:0 "TO DO"
+ building_tec_biological_extractor_desc_genocidal:0 "TO DO"
+
+# --------------- GENETIC ADDITIONAL TRAITS ----------------------
+ # Humanoid + mammalian
+ trait_tec_gene_archetype_mammalian:0 "TO DO"
+ trait_tec_gene_archetype_mammalian_desc:0 "§LTO DO.§!"
+
+ # Avian + reptilian
+ trait_tec_gene_archetype_saurian:0 "TO DO"
+ trait_tec_gene_archetype_saurian_desc:0 "§LTO DO.§!"
+
+ # Chitinous - Arthropoid + molluscoid
+ trait_tec_gene_archetype_chitinous:0 "TO DO"
+ trait_tec_gene_archetype_chitinous_desc:0 "§LTO DO.§!"
+
+ # Aquatic
+ trait_tec_gene_archetype_aquatic:0 "TO DO"
+ trait_tec_gene_archetype_aquatic_desc:0 "§LTO DO.§!"
+
+ # Lithoid
+ trait_tec_gene_archetype_lithoid:0 ""
+ trait_tec_gene_archetype_lithoid_desc:0 "§LTO DO.§!"
+
+ # Necroid
+ trait_tec_gene_archetype_necroid:0 "Bio-Mollecular Cleansing"
+ trait_tec_gene_archetype_necroid_desc:0 "§LTO DO.§!"
+
+ # Toxoid
+ trait_tec_gene_archetype_lithoid:0 "TO DO"
+ trait_tec_gene_archetype_lithoid_desc:0 "§LTO DO.§!"
+
+ # Building
+ building_tec_genetic_recombinator:0 "Genetic Recombinator"
+ building_tec_genetic_recombinator_plural:0 "Genetic Recombinators"
+ building_tec_genetic_recombinator_desc:0 "TO DO"
+ building_tec_genetic_recombinator_desc_genocidal:0 "TO DO"
 
 # --------------- CYBERPSIONIC THINGS TRAITS ----------------------
  building_tec_cyberpsionic_gate:0 "Phase-Gate"
