Placeholders and minor fixes from logs

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -45,12 +45,13 @@
  tr_harmony_federations_finish_desc:0 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!.\nGrants access to the §Y$spiritualist_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
 
 # ------------------------------------------------- Mercantile
+ tr_mercantile_trickle_up_economics_desc: "$mod_planet_clerks_trade_value_produces_add$: §G+1§!"
  tr_mercantile_trickle_up_economics_gestalt:0 "Within Cells Interlinked"
- tr_mercantile_trickle_up_economics_gestalt_desc:0 "£job_maintenance_drone£ §YMaintenance Drones§! produce §Y2§! §YTrade Value§!."
+ tr_mercantile_trickle_up_economics_gestalt_desc:0 "$mod_planet_maintenancedrones_trade_value_produces_add$: §G+2§!"
  tr_mercantile_trickle_up_economics_gestalt_delayed:0 "Chains of interlinked semi-emotional emulator modules on our menial drones will surely increase our margin of benefit."
 
  tr_mercantile_commercial_enterprise_gestalt:0 "Supplementary Trading Processing"
- tr_mercantile_commercial_enterprise_gestalt_tooltip:0 "£building£ §Y$building_tec_trade_machine_1$§! and §Y$building_tec_trade_machine_stonks$§! buildings provide §Y1§! extra £job_tec_trade_drone£ §Y$job_tec_trade_Drone$ Job§! per level.\nRing World §YCommercial Segments§! and Habitat §YTrade Districts§! do likewise.\n£unity£ Unity from $job_tec_trade_Drone$: §G+1§!"
+ tr_mercantile_commercial_enterprise_gestalt_tooltip:0 "£building£ §Y$building_tec_trade_machine_1$§! and §Y$building_tec_trade_machine_stonks$§! buildings provide §Y1§! extra £job_tec_trade_drone£ §Y$job_tec_trade_Drone$ Job§! per level.\nRing World §YCommercial Segments§! and Habitat §YTrade Districts§! do likewise."
  tr_mercantile_commercial_enterprise_gestalt_delayed:0 "Higher initial investments will convey into higher gains for our collective."
 
  tr_mercantile_finish_desc:4 "Trade Value: §G+10%§!.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
