--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -67,7 +67,7 @@
 
  tec_loc_capital_tier:0 "£building£ Capital Tier"
 
- tec_loc_cannot reproduce:0 "§RCannot Reproduce Naturally§!"
+ tec_loc_cannot_reproduce:0 "§RCannot Reproduce Naturally§!"
 
  tec_blank:0 ""
 
