--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -148,6 +148,15 @@ empire_not_elitist_or_materialist:0 "$TRIGGER_FAIL$Our empire does not embrace e
  mod_planets_produces_mult:0 "Resources from jobs"
  mod_country_base_minor_artifacts_produces_add:0 "Monthly £minor_artifacts£ Minor Artifacts "
 
+ decisions_arcologies: "Arcology Decisions"
+ decisions_ecoworld: "Ecoworld Decisions"
+ decisions_ecu: "Ecumenopolis Decisions"
+ habitats: "Habitats"
+ tec_protoworlds: "Protoworlds"
+ planet_criminals: "Criminals"
+ planet_colonists: "Colonists"
+ planet_tec_trade_drones: "Blockchain Drones"
+
  mod_planet_jobs_latent_psionic_produces_mult:0 "§YLatent Psionic§! Pop Output"
  mod_planet_jobs_latent_psionic_upkeep_mult:0 "§YLatent Psionic§! Pop Upkeep"
 
